Fix Fontawesome Icon Clipping

--- a/sass/include/_icons.scss
+++ b/sass/include/_icons.scss
@@ -107,7 +107,7 @@
     width: var(--fs);
     height: var(--fs);
     display: inline-block;
-    overflow: hidden;
+    //overflow: hidden;
     vertical-align: middle
   }
   .svgh:hover {
